--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
         <div class="desc">
             <p class="heading" class="description">Project Description:</p>
             <p class="description-content">
-                The OmniFood website frontend project aims to create a modern and visually appealing online platform for a food delivery service. The website will primarily focus on frontend development, encompassing the user interface design, layout, and interactivity using HTML, CSS            </p>
+                The OmniFood website frontend project aims to create a modern and visually appealing online platform for a food delivery service. The website will primarily focus on frontend development, encompassing the user interface design, layout, and interactivity using HTML, CSS            
+            </p>
         </div>
 
         <div class="desc">
             <p class="heading" class="description">Technologies Used</p>
             <ul>
                 <li class="proce">
-                    <span>HTML:</span> 
-                    For structuring the website's content.
+                    HTML 
                 </li>
                 <li class="proce">
-                    <span>CSS:</span> 
-                    For styling and layout design, including responsiveness.
+                    CSS 
                 </li>
             </ul>
         </div>
@@ -42,9 +41,6 @@
                     <li class="proce">
                         <span>Landing Page:</span> 
                         Engaging hero section introducing OmniFood's value proposition and enticing users to explore further.</li>
-                    <li class="proce">
-                        <span>Operation</span> 
-                        This page will provide detailed information about the services offered by the bank, including savings accounts, loans, investments, and more. Each service will have its own section with descriptions and benefits.</li>
                     <li class="proce">
                         <span> Navigation:</span> 
                         Intuitive navigation menu for seamless browsing across different sections of the website, including the menu, about us, and contact pages.
@@ -63,7 +59,8 @@
         <div class="cons">
             <p class="heading" class="conclusion">Conclusion</p>
             <p class="conclusion-content">
-                In conclusion, the OmniFood website project will deliver a visually stunning and user-friendly interface that encapsulates the essence of the brand. With its intuitive navigation, enticing menu offerings, and responsive design, OmniFood is poised to captivate customers and elevate their dining experience.            </p>
+                In conclusion, the OmniFood website project will deliver a visually stunning and user-friendly interface that encapsulates the essence of the brand. With its intuitive navigation, enticing menu offerings, and responsive design, OmniFood is poised to captivate customers and elevate their dining experience.            
+            </p>
         </div>
 
         <div class="src-live d-flex justify-content-around">
